--- a/src/demoportal_fe/src/app/landing/landing.component.html
+++ b/src/demoportal_fe/src/app/landing/landing.component.html
@@ -1,5 +1,5 @@
 <div class="ic1-ml-72 ic1-mr-72 ic1-mb-64">
-  <div class="ic1-row ic1-mr-24 ic1-ml-24 ic1-pt-32 ic1-pb-32">
+  <div class="ic1-row ic1-mx-24 ic1-pt-32 ic1-pb-8">
     <div class="ic1-col-12">
       <h2 class="ic1-pb-8">{{ 'cmqMY|Demo_Dizme_shopProducts' | translate }}</h2>
       <p>{{ 'bTHBy1|header_txt_SlideMenu_2' | translate }}</p>
@@ -42,7 +42,7 @@
                 [title]="'cmQog1|Demo_AFM_txt_title' | translate" [text]="'cmQog1|Demo_AFM_txt_title' | translate">
               </app-card>
             </div>
-            <div class="card-back ic1-row justify-center ">
+            <div class="card-back ic1-row justify-center content-center">
               <div class="ic1-col-12">
                 <p class="text-center">{{ 'cmQog1|Demo_AFM_txt_title' | translate }}</p>
               </div>
