--- a/src/demoportal_fe/src/app/components/card-menu/card-menu.component.html
+++ b/src/demoportal_fe/src/app/components/card-menu/card-menu.component.html
@@ -14,6 +14,7 @@
                    aria-hidden="true"
                    role="button"
                  >{{icon}}</i>
+                 <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0&icon_names=dynamic_feed" />
                </div>
               
                <span class="!capitalize">{{title.toLowerCase()}}</span>
